--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,53 @@
+body {
+  background: url("../images/concrete_seamless.png");
+  font-family: 'Roboto', sans-serif;
+}
+
+p {
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+}
+
+.navbar {
+	padding: 30px;
+}
+
+.navbar-brand {
+	font-size: 30px;
+}
+
+.nav a {
+	font-size: 18px;
+}
+
+.social:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+/* sticky footer styling */
+
+html,
+body {
+  height: 100%;
+}
+
+.container {
+  height: auto !important;
+  height: 100%;
+  min-height: 100%;
+  margin: 0 auto -105px;
+}
+
+footer,
+.push {
+  height: 105px;
+}
+
+/* end sticky footer styling */
+
+/* Portfolio Page */
 .thumbnail {
     position: relative;
 }
@@ -11,4 +61,20 @@
   color: #fff;
   text-align: center;
   background: #4aaaa5;
+}
+
+
+/* Footer */
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+}
+
+/* Sidebar */
+.panel-body {
+	padding: 50px;
 }
